waves fix align bottom

--- a/src/Pages/login1/login1.scss
+++ b/src/Pages/login1/login1.scss
@@ -7,7 +7,7 @@
 
 .logincontainer {
     display: flex;
-    min-height: 84vh;
+    min-height: 86vh;
     align-items: center;
     justify-content: center;
 }
